@@ -24,6 +24,7 @@ export function mimeFromFileName(fileName: string): string;
 export function mimeFromExt(ext: string): string;
 export function getImageInfo(url: string): Promise<ImageInfo|null>;
 export function propertiesToHTML(prop: object): string;
+export function getCacheSize(name: string): Promise<number>;
 
 declare class DialogButton
 {
